// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders caterer header correctly 1`] = `
<div
  className="header"
>
  <div
    className="navbar"
  >
    <Connect(CatererHeader)
      dateType={null}
      showTime={true}
    />
  </div>
</div>
`;

exports[`Header renders correctly 1`] = `
<div
  className="header homepage"
>
  <div
    className="navbar unauth-navbar"
  >
    <React.Fragment>
      <div
        className="page-title"
      >
        <h3>
          <a
            href="/"
          >
            BOOK-A-MEAL
          </a>
        </h3>
      </div>
      <div
        className="navlinks"
      >
        <a
          className="link"
          href="./signin"
        >
          Log In
        </a>
        <a
          className="link"
          href="./signup"
        >
          Sign Up
        </a>
      </div>
    </React.Fragment>
  </div>
</div>
`;

exports[`Header renders unauthenticated header correctly 1`] = `
<div
  className="header unauth"
>
  <div
    className="navbar unauth-navbar"
  >
    <React.Fragment>
      <div
        className="page-title"
      >
        <h3>
          <a
            href="/"
          >
            BOOK-A-MEAL
          </a>
        </h3>
      </div>
    </React.Fragment>
  </div>
</div>
`;
